compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__field_type_different_between_variants.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub type Shape {\n    Square(x: Int, y: Int)\n    Rectangle(x: String, y: String)\n}\npub fn get_x(shape: Shape) { shape.x }\npub fn get_y(shape: Shape) { shape.y }"
---
error: Unknown record field
  ┌─ /src/one/two.gleam:6:35
  │
6 │ pub fn get_x(shape: Shape) { shape.x }
  │                                   ^^ This field does not exist

The value being accessed has this type:

    Shape

It does not have any fields.

Note: The field you are trying to access might not be consistently present or positioned across the custom type's variants, preventing reliable access. Ensure the field exists in the same position and has the same type in all variants to enable direct accessor syntax.
