compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__fn0_eq_fn1.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "fn() { 1 } == fn(x) { x + 1 }"
---
----- SOURCE CODE
fn() { 1 } == fn(x) { x + 1 }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:15
  │
1 │ fn() { 1 } == fn(x) { x + 1 }
  │               ^^^^^^^^^^^^^^^

Expected type:

    fn() -> Int

Found type:

    fn(Int) -> Int
