compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__function_arg_and_return_annotation.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "fn(x: Int) -> Float { x }"
---
----- SOURCE CODE
fn(x: Int) -> Float { x }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:23
  │
1 │ fn(x: Int) -> Float { x }
  │                       ^

The type of this returned value doesn't match the return type
annotation of this function.

Expected type:

    Float

Found type:

    Int
