compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__function_return_annotation.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "fn() -> Int { 2.0 }"
---
----- SOURCE CODE
fn() -> Int { 2.0 }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:15
  │
1 │ fn() -> Int { 2.0 }
  │               ^^^

The type of this returned value doesn't match the return type
annotation of this function.

Expected type:

    Int

Found type:

    Float
