compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__function_return_annotation_mismatch_with_try_nested.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 530
expression: "fn() -> Result(Nil, Nil) {\n          try _ = {\n            try _ = {\n                try _ = Error(1)\n                Ok(Nil)\n            }\n            Ok(Nil)\n          }\n          Ok(Nil)\n        }"
---
error: Type mismatch
  ┌─ /src/one/two.gleam:2:11
  │  
2 │ ╭           try _ = {
3 │ │             try _ = {
4 │ │                 try _ = Error(1)
5 │ │                 Ok(Nil)
  · │
8 │ │           }
9 │ │           Ok(Nil)
  │ ╰─────────────────^

The type of this returned value doesn't match the return type 
annotation of this function.

Expected type:

    Result(Nil, Nil)

Found type:

    Result(Nil, Int)

